fixed alignments (margins) for index.html for mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -537,7 +537,8 @@ div form {
    }
 
    h3 {
-       font-size: 1rem;
+       font-size: 1.5rem;
+       font-weight: 600;
    }
 
     .h1-margin {
@@ -598,7 +599,7 @@ div form {
 }
 
 .info-box-2 {
-    margin: 20px;
+    margin: 2rem 1rem 0 1rem;
     padding: 1rem;
     text-align: justify;
 }
@@ -645,6 +646,10 @@ div form {
 
 .content-style-lotr {
     font-size: smaller;
+}
+
+.cta-homepage {
+    margin: 2rem;
 }
 
 }
